Bug 203302 - Composer called from krunner append signature instead of subsituting
Summary: Composer called from krunner append signature instead of subsituting
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-10 12:52 UTC by FiNeX
Modified: 2009-09-17 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2009-08-10 12:52:57 UTC
Steps to reproduce:

1 ) start kmail
2 ) create a new mail (from kmail app window or from the kmail icon on the system tray)
3 ) switch the identity
-> the signature change according to the identity settings, this is ok
4 ) now starts krunner (ALT+F2) and type:
4.1 ) "mailto:" or type the name of someone in the addressbook so you can select fo sending an email
4.2 ) press enter
-> the kmail composer window will be opened
5 ) switch the identity
-> the signature of the new identity is appended after the existing signature instead of subsituting the previous signature
Comment 1 Thomas McGuire 2009-08-10 13:53:55 UTC
Adding Jonathan as CC, since he did some changes in that area lately.
Jonathan, can you have a look please?
Comment 2 FiNeX 2009-08-12 16:30:21 UTC
This bug Could be related to bug #203576.
Comment 3 Jonathan Armond 2009-09-17 15:14:46 UTC
SVN commit 1024881 by jarmond:

Open composer with 'New' context when calling from KRunner.

BUG: 203302

 M  +3 -3      kmkernel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1024881