Open composer with 'New' context when calling from KRunner.

BUG: 203302

svn path=/trunk/KDE/kdepim/; revision=1024881